<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/title1Layout"
        layout="@layout/title_line_layout"/>
    <!--Initialization equipment -->
    <LinearLayout
        android:id="@+id/initLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title1Layout">
        <Button
            android:id="@+id/mBtn_initDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:background="@android:color/darker_gray"
            android:padding="@dimen/dp_5"
            android:textAllCaps="false"
            android:text="@string/init_dev"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_25" />

        <TextView
            android:id="@+id/mTxtView_initDev_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mBtn_initDev"
            android:paddingBottom="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:paddingTop="@dimen/dp_20"
            android:textSize="@dimen/sp_25"
            android:visibility="visible" />
    </LinearLayout>

    <include
        android:id="@+id/title2Layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/initLayout"
        layout="@layout/title_m1_layout"/>
    <!--card reset -->
    <LinearLayout
        android:id="@+id/resetLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2Layout"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mBtn_reset_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mTxtView_reset_card_tips"
            android:textAllCaps="false"
            android:background="@android:color/darker_gray"
            android:padding="@dimen/dp_5"
            android:text="@string/reset_card"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_25" />
        <TextView
            android:id="@+id/tv_reset_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:paddingTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_25"/>
    </LinearLayout>

    <!--Read card information -->
    <TextView
        android:id="@+id/mTxtView_read_card_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetLayout"

        android:paddingBottom="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:paddingTop="@dimen/dp_20"
        android:text="@string/read_card_setting"
        android:textColor="@color/line_text"
        android:textSize="@dimen/sp_25"
        android:visibility="visible" />

    <LinearLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTxtView_read_card_tips"
        android:id="@+id/mRelayout_read_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_5">

        <EditText
            android:id="@+id/mEditxt_sector_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_read_card_sector"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/mEditxt_read_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mEditxt_sector_read"
            android:layout_toRightOf="@+id/mEditxt_sector_read"
            android:hint="@string/hint_read_index"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/mEditxt_read_key_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mEditxt_sector_read"
            android:layout_below="@+id/mEditxt_sector_read"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/hint_write_key_type"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/mEditxt_read_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mEditxt_read_key_type"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/mEditxt_read_key_type"
            android:hint="@string/hint_read_key"
            android:maxLength="12"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/readLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mRelayout_read_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mBtn_read_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mRelayout_read_card"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:textAllCaps="false"
            android:background="@android:color/darker_gray"
            android:padding="@dimen/dp_5"
            android:text="@string/read_card"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_25" />
        <TextView
            android:id="@+id/mTxtView_read_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/m1_read_result"
            android:layout_marginTop="@dimen/dp_5"
            android:textSize="@dimen/sp_25" />
    </LinearLayout>

    <!--Write card information -->
    <TextView
        android:id="@+id/mTxtView_write_card_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/readLayout"
        android:paddingBottom="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:paddingTop="@dimen/dp_20"
        android:text="@string/write_card_setting"
        android:textColor="@color/line_text"
        android:textSize="@dimen/sp_25"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/mRelayout_write_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTxtView_write_card_tips"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_5">

        <EditText
            android:id="@+id/mEditxt_sector_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_write_card_sector"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/mEditxt_write_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mEditxt_sector_write"
            android:layout_toRightOf="@+id/mEditxt_sector_write"
            android:hint="@string/hint_write_index"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/mEditxt_write_key_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mEditxt_sector_write"
            android:layout_below="@+id/mEditxt_sector_write"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/hint_write_key_type"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />


        <EditText
            android:id="@+id/mEditxt_wirte_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mEditxt_write_key_type"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/mEditxt_write_key_type"
            android:hint="@string/hint_write_key"
            android:maxLength="12"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mRelayout_write_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mBtn_write_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mRelayout_write_card"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:textAllCaps="false"
            android:background="@android:color/darker_gray"
            android:padding="@dimen/dp_5"
            android:text="@string/write_card"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_25" />
        <TextView
            android:id="@+id/mTxtView_write_statusvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/m1_write_value"
            android:layout_marginTop="@dimen/dp_5"
            android:textSize="@dimen/sp_25" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>